--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
-
+<p>
+  <strong>Content:</strong>
+  <%= @user.microposts.first.content %>
+</p>
 <p>
   <strong>Name:</strong>
   <%= @user.name %>
